--- a/Modules/UserManager/Upendo.Modules.UserManager.csproj
+++ b/Modules/UserManager/Upendo.Modules.UserManager.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <DocumentationFile>bin\Upendo.Modules.UserManager.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -46,6 +47,9 @@
   </PropertyGroup>
   <Import Project="..\..\Build\SolutionReferences.targets" />
   <ItemGroup>
+    <PackageReference Include="BuildWebCompiler2022">
+      <Version>1.14.10</Version>
+    </PackageReference>
     <PackageReference Include="DotNetNuke.Core" Version="9.9.0" />
     <PackageReference Include="DotNetNuke.Instrumentation" Version="9.9.0" />
     <PackageReference Include="DotNetNuke.Web" Version="9.9.0" />
@@ -90,6 +94,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\Constants.cs" />
     <Compile Include="Components\FeatureController.cs" />
     <Compile Include="Controllers\RolesManageController.cs" />
     <Compile Include="Controllers\UserManageController.cs" />
@@ -104,6 +109,7 @@
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Functions.cs" />
+    <Compile Include="Utility\Helpers.cs" />
     <Compile Include="Utility\RolesRepository.cs" />
     <Compile Include="Utility\UserRepository.cs" />
     <Compile Include="ViewModels\Pagination.cs" />
@@ -118,11 +124,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\defaultUserPicture.jpg" />
-    <Content Include="Images\Upendo-logo-trans.png" />
     <Content Include="License.txt" />
-    <Content Include="module.css" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
+    <Content Include="module.scss" />
+    <Content Include="module.css">
+      <DependentUpon>module.scss</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="module.min.css">
+      <DependentUpon>module.css</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ReleaseNotes.txt" />
-    <Content Include="Images\logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Upendo.UserManager.dnn">
@@ -140,12 +156,20 @@
     <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_LocalResources\AddEdit.resx" />
+    <Content Include="App_LocalResources\AddEdit.resx">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="App_LocalResources\AddEditRoles.resx" />
-    <Content Include="App_LocalResources\Index.resx" />
-    <Content Include="App_LocalResources\Shared.resx" />
+    <Content Include="App_LocalResources\Index.resx">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="App_LocalResources\Shared.resx">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="App_LocalResources\UserManageController.resx" />
-    <Content Include="App_LocalResources\UserRoles.resx" />
+    <Content Include="App_LocalResources\UserRoles.resx">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_LocalResources\FeatureController.resx" />
@@ -157,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="NuGet.config" />
+    <Content Include="libman.json" />
     <None Include="packages.config" />
     <Content Include="Views\RolesManage\Create.cshtml" />
     <Content Include="Views\RolesManage\Details.cshtml" />
