--- a/Modules/UserManager/Upendo.Modules.UserManager.csproj
+++ b/Modules/UserManager/Upendo.Modules.UserManager.csproj
@@ -94,7 +94,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\Constants.cs" />
     <Compile Include="Components\FeatureController.cs" />
     <Compile Include="Controllers\RolesManageController.cs" />
     <Compile Include="Controllers\UserManageController.cs" />
@@ -108,6 +107,7 @@
     <Compile Include="Models\DnnModel\Users.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Constants.cs" />
     <Compile Include="Utility\Functions.cs" />
     <Compile Include="Utility\Helpers.cs" />
     <Compile Include="Utility\RolesRepository.cs" />
